fix to still image overlapping header

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,7 +34,7 @@ header {
 
   position: sticky;
   top: 0px;
-  z-index: 2;
+  z-index: 5;
   background-color: #f6aad0;
 }
 
